# ThreeDimensional17BitArray

./: CMakeLists.txt  MyClass.cpp  MyClass.h  README.md
tests/: CMakeLists.txt  my_tests.cpp
